tests/cases/should_fail/patterns/incomplete_spread_pattern.stderr
error: malformed spread pattern, expected 1 more `.` to complete the pattern
 --> $DIR/incomplete_spread_pattern.hash:3:5
2 |   
3 |   [ ..d ] := k;
  |       ^ here
